--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,38 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Orbitron:wght@400;500;600;700;800&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --fFOne: "Montserrat", sans-serif;
+  --fFTwo: "Orbitron", sans-serif;
+  --theme-color: #ffc000;
+  --smoke-color: #f5f5f5;
+  --black-color: #000000;
+  --white-color: #ffffff;
+  --background-color: #0e0e0e;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #0e0e0e;
+}
+
+html {
+  scroll-behavior: smooth;
+  font-family: var(--fFOne);
+  scroll-padding-top: 12vh;
+}
+
+@layer components {
+  .container {
+    @apply px-5 max-w-[1440px] mx-auto md:px-10 lg:px-14;
+  }
+  .primary-text {
+    @apply text-[var(--theme-color)];
+  }
+
+  .primary-bg {
+    @apply bg-[var(--theme-color)];
+  }
 }
